--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ AspNetAccessMySql/bin
 AspNetAccessMySql/obj
 AspNetAccessMongoDB/bin
 AspNetAccessMongoDB/obj
+
 AspNetRabbitMQ/AspNetRabbitMQ.ModeDemo/AspNetRabbitMQ.ModeDemo.Consumer/bin
 AspNetRabbitMQ/AspNetRabbitMQ.ModeDemo/AspNetRabbitMQ.ModeDemo.Consumer/obj
 AspNetRabbitMQ/AspNetRabbitMQ.ModeDemo/AspNetRabbitMQ.ModeDemo.Producer/bin
@@ -20,5 +21,18 @@ AspNetKafka/AspNetKafka.Producer/bin
 AspNetKafka/AspNetKafka.Producer/obj
 AspNetElasticsearch/AspNetElasticsearch.BasicDemo/bin
 AspNetElasticsearch/AspNetElasticsearch.BasicDemo/obj
+
+DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Consumer/bin
+DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Consumer/obj
+DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Producer/bin
+DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Producer/obj
+DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Utils/bin
+DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Utils/obj
+DotNetKafka/DotNetKafka.Consumer/bin
+DotNetKafka/DotNetKafka.Consumer/obj
+DotNetKafka/DotNetKafka.Producer/bin
+DotNetKafka/DotNetKafka.Producer/obj
+DotNetElasticsearch/DotNetElasticsearch.BasicDemo/bin
+DotNetElasticsearch/DotNetElasticsearch.BasicDemo/obj
 /.vs
 *.log
