--- a/DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Producer/DotNetRabbitMQ.ModeDemo.Producer.csproj
+++ b/DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Producer/DotNetRabbitMQ.ModeDemo.Producer.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AspNetRabbitMQ.ModeDemo.Utils\DotNetRabbitMQ.ModeDemo.Utils.csproj" />
+    <ProjectReference Include="..\DotNetRabbitMQ.ModeDemo.Utils\DotNetRabbitMQ.ModeDemo.Utils.csproj" />
   </ItemGroup>
 
 </Project>
