--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,5 @@
-AspNetExperiment/bin
-AspNetExperiment/obj
-AspNetAuth/bin
-AspNetAuth/obj
-AspNetAuthFilter/bin
-AspNetAuthFilter/obj
-AspNetAccessMySql/bin
-AspNetAccessMySql/obj
-AspNetAccessMongoDB/bin
-AspNetAccessMongoDB/obj
-DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Consumer/bin
-DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Consumer/obj
-DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Producer/bin
-DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Producer/obj
-DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Utils/bin
-DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Utils/obj
-DotNetKafka/DotNetKafka.Consumer/bin
-DotNetKafka/DotNetKafka.Consumer/obj
-DotNetKafka/DotNetKafka.Producer/bin
-DotNetKafka/DotNetKafka.Producer/obj
-DotNetElasticsearch/DotNetElasticsearch.BasicDemo/bin
-DotNetElasticsearch/DotNetElasticsearch.BasicDemo/obj
-DotNetQuartz/DotNetQuartz.BasicDemo/bin
-DotNetQuartz/DotNetQuartz.BasicDemo/obj
-DotNetBenchmark/bin
-DotNetBenchmark/obj
+bin/
+obj/
 DotNetBenchmark/BenchmarkDotNet.Artifacts
 /.vs
 *.log
