--- a/DotNetOpenTelemetry/DotNetOpenTelemetry.Microservice/DotNetOpenTelemetry.Microservice.WebApi1ToWebApi2/DotNetOpenTelemetry.Microservice.WebApi1ToWebApi2.csproj
+++ b/DotNetOpenTelemetry/DotNetOpenTelemetry.Microservice/DotNetOpenTelemetry.Microservice.WebApi1ToWebApi2/DotNetOpenTelemetry.Microservice.WebApi1ToWebApi2.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="OpenTelemetry" Version="1.4.0" />
     <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.4.0" />
+    <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.4.0" />
+    <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.4.0-rc.4" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.4.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.14" />
   </ItemGroup>
