--- a/DotNetOpenTelemetry/DotNetOpenTelemetry.Microservice/DotNetOpenTelemetry.Microservice.WebApi1ToWebApi2/Properties/launchSettings.json
+++ b/DotNetOpenTelemetry/DotNetOpenTelemetry.Microservice/DotNetOpenTelemetry.Microservice.WebApi1ToWebApi2/Properties/launchSettings.json
@@ -21,7 +21,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:13901;http://localhost:13900",
+      //"applicationUrl": "https://localhost:13901;http://localhost:13900",
+      "applicationUrl": "https://localhost:13901;http://192.168.1.33:13900",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
