--- a/DotNetGrpc/DotNetGrpc.Client/DotNetGrpc.Client.csproj
+++ b/DotNetGrpc/DotNetGrpc.Client/DotNetGrpc.Client.csproj
@@ -8,25 +8,23 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Remove="Protos\greet.proto" />
-		<None Remove="Protos\order.proto" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Google.Protobuf" Version="3.21.9" />
-		<PackageReference Include="Grpc.Net.Client" Version="2.49.0" />
-		<PackageReference Include="Grpc.Net.ClientFactory" Version="2.49.0" />
-		<PackageReference Include="Grpc.Tools" Version="2.50.0">
+		<PackageReference Include="Google.Protobuf" Version="3.25.3" />
+		<PackageReference Include="Grpc.Net.Client" Version="2.61.0" />
+		<PackageReference Include="Grpc.Net.ClientFactory" Version="2.61.0" />
+		<PackageReference Include="Grpc.Tools" Version="2.62.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
-		<Protobuf Include="Protos\greet.proto">
+		<Protobuf Include="Protos\order.proto">
 			<GrpcServices>Client</GrpcServices>
 		</Protobuf>
-		<Protobuf Include="Protos\order.proto">
+		<Protobuf Include="Protos\bidirectionalstreaming.proto">
+			<GrpcServices>Client</GrpcServices>
+		</Protobuf>
+		<Protobuf Include="Protos\downloadfile.proto">
 			<GrpcServices>Client</GrpcServices>
 		</Protobuf>
 	</ItemGroup>
