--- a/DotNetGrpc/DotNetGrpc.Server/DotNetGrpc.Server.csproj
+++ b/DotNetGrpc/DotNetGrpc.Server/DotNetGrpc.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,16 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Protos\order.proto" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
     <Protobuf Include="Protos\order.proto" GrpcServices="Server" />
+	<Protobuf Include="Protos\bidirectionalstreaming.proto" GrpcServices="Server" />
+	<Protobuf Include="Protos\downloadfile.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.61.0" />
   </ItemGroup>
 
 </Project>
