--- a/AspNetDistributedLocks/RedisDistributedLock/Properties/launchSettings.json
+++ b/AspNetDistributedLocks/RedisDistributedLock/Properties/launchSettings.json
@@ -1,10 +1,11 @@
 ﻿{
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:7790",
-      "sslPort": 44369
+      "applicationUrl": "http://localhost:32729",
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -12,16 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5259",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7081;http://localhost:5259",
+      "applicationUrl": "http://localhost:5020",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
