--- a/AspNetAspire/AspNetAspire.AppHost/appsettings.json
+++ b/AspNetAspire/AspNetAspire.AppHost/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
+  },
+  "Parameters": {
+    "goversion": "1.22",
+    "accesstoken": "abc"
+  },
+  "ConnectionStrings": {
+    "mysql": ""
   }
 }
