--- a/DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Producer/DotNetRabbitMQ.ModeDemo.Producer.csproj
+++ b/DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Producer/DotNetRabbitMQ.ModeDemo.Producer.csproj
@@ -2,11 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
+	<Nullable>enable</Nullable>
+	<ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.1.1" />
   </ItemGroup>
 
   <ItemGroup>
