--- a/DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Utils/DotNetRabbitMQ.ModeDemo.Utils.csproj
+++ b/DotNetRabbitMQ/DotNetRabbitMQ.ModeDemo/DotNetRabbitMQ.ModeDemo.Utils/DotNetRabbitMQ.ModeDemo.Utils.csproj
@@ -1,11 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
+	<Nullable>enable</Nullable>
+	<ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.1.1" />
   </ItemGroup>
 
 </Project>
