--- a/AspNetAspire/AspNetAspire.AppHost/appsettings.json
+++ b/AspNetAspire/AspNetAspire.AppHost/appsettings.json
@@ -1,16 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Aspire.Hosting.Dcp": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning",
+            "Aspire.Hosting.Dcp": "Warning"
+        }
+    },
+    "Parameters": {
+        "nginxversion": "latest",
+        "accesstoken": "abc"
+    },
+    "ConnectionStrings": {
+        "mysql": "Server=localhost"
     }
-  },
-  "Parameters": {
-    "goversion": "1.22",
-    "accesstoken": "abc"
-  },
-  "ConnectionStrings": {
-    "mysql": ""
-  }
 }
