--- a/AspNetAspire/AspNetAspire.AppHost/dockerfiles/1/Dockerfile
+++ b/AspNetAspire/AspNetAspire.AppHost/dockerfiles/1/Dockerfile
@@ -1,12 +1,3 @@
-# Stage 1: Build the Go program
-ARG GO_VERSION=1.22
-FROM golang:${GO_VERSION} AS builder
-WORKDIR /build
-COPY . .
-RUN go build mygoapp.go
-
-# Stage 2: Run the Go program
-FROM mcr.microsoft.com/cbl-mariner/base/core:2.0
-WORKDIR /app
-COPY --from=builder /build/mygoapp .
-CMD ["./mygoapp"]
+ARG NGINX_VERSION=latest
+FROM nginx:${NGINX_VERSION}
+CMD ["nginx", "-g", "daemon off;"]
