fix: Custom.Api project refer to ServiceDefaults

--- a/AspNetAspire/Custom.Api/Custom.Api.csproj
+++ b/AspNetAspire/Custom.Api/Custom.Api.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AspNetAspire.ServiceDefaults\AspNetAspire.ServiceDefaults.csproj" />
+  </ItemGroup>
+
 </Project>
